Convert `SelectionModel` into a record
As the JavaDoc says: The selection model is an immutable object and thus
suitable for becoming a record. This also comes with additional
benefits, such as the automatic creation of getters and proper
implementations of the `equals()` and `hashCode()` method.

The `SelectionModel` no longer contains the `selectionContainer` field,
as it was always initialized with `null` and never used.

Additionally, the list of selected edit-parts is now truly immutable and
not just modifiable, because currently the contents of this list can
still be changed via the mutable list with which the constructor was
called.

At last, this change also contains some minor adjustments and cleanups
of this class.